example/secondfile/objects/DHStatus_Ethernet__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Ethernet</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>RDS-Premise Details --&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;Action</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CircuitInEffect_Date__c</fullName>
        <label>Circuit In Effect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CircuitInEffect_Time__c</fullName>
        <label>Circuit In Effect Time</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Language_Circuit_ID__c</fullName>
        <description>RDS-Premise Details ---&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt; Common Language Circuit ID</description>
        <label>Common Language Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Language_Facility_ID__c</fullName>
        <description>RDS-Premise Details --&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;Common Language Facility ID</description>
        <label>Common Language Facility ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Physical_Provisioning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning-DHStatus-Ethernet-DHStatus-Physical Provisioning</description>
        <label>DHStatus-Physical Provisioning</label>
        <referenceTo>DHStatus_Physical_Provisioning__c</referenceTo>
        <relationshipLabel>DHStatus-Ethernet</relationshipLabel>
        <relationshipName>DHStatus_Ethernet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <description>Technical field to obtain the SFDC Id of related DHStatus-Update Deal Hash Details. Not to be added on Page Layout.</description>
        <formula>CASESAFEID( DHStatus_Physical_Provisioning__r.DHStatus_Update_Deal_Hash_Details__c )</formula>
        <label>DHStatus-Update Deal Hash Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH_ID__c</fullName>
        <formula>DHStatus_Physical_Provisioning__r.DHStatus_Update_IDH__r.Id</formula>
        <label>DHStatus Update IDH ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedicated_Ethernet_Header_ConversationID__c</fullName>
        <label>Dedicated Ethernet Header ConversationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedicated_Ethernet_Header_Message_ID__c</fullName>
        <label>Dedicated Ethernet Header Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>RDS-Premise Details --&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;Error Message</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethernet_Type__c</fullName>
        <description>RDS-Premise Details --&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;Ethernet Type</description>
        <label>Ethernet Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_IN_Effect_Date__c</fullName>
        <description>RDS-Premise Details ---&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;Facility IN Effect Date</description>
        <label>Facility IN Effect Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Order_Number__c</fullName>
        <description>RDS-Premise Details ---&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;Facility Order Number</description>
        <label>Facility Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <description>RDS-Premise Details --&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;Message Type</description>
        <label>Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Action__c</fullName>
        <description>RDS--&gt; Premise Details--&gt; DHStatus-Update Deal Hash Details---&gt; DHStatus-Physical Provisioning---&gt; DHStatus-Ethernet---&gt; Original Action</description>
        <label>Original Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Code__c</fullName>
        <description>RDS-Premise Details --&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;Return Code</description>
        <label>Return Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDI_Order_Number_Version__c</fullName>
        <description>RDS-Premise Details ---&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;SDI Order Number Version</description>
        <label>SDI Order Number Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDI_Order_Number__c</fullName>
        <description>RDS-Premise Details --&gt; DHStatus-Update Deal Hash Details ---&gt; DHStatus-PhysicalProvisioning---&gt;DHStatus-Ethernet--&gt;SDI Order Number</description>
        <label>SDI Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendCIENotificationStamp__c</fullName>
        <label>Send CIE Notification Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendEtherneNotificationTimeStamp__c</fullName>
        <label>Send Ethernet Notification Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendFIENotificationStamp__c</fullName>
        <label>Send FIE Notification Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendTieDownNotificationTimeStamp__c</fullName>
        <label>Send Tie Down Notification Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Switched_Ethernet_Header_Conversation_ID__c</fullName>
        <label>Switched Ethernet Header Conversation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Switched_Ethernet_Header_Message_ID__c</fullName>
        <label>Switched Ethernet Header Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Ethernet</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>DHStatus-Ethernet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Ethernet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>